添加了测试老年代和新生代的值